# md_code_query_tools

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
doc/: main.md
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: DataDisplay.tsx  FolderSelector.tsx  HistoryTable.tsx  QueryInput.tsx  TitleBar.tsx
