[package]
name = "data-query-tool"
version = "1.0.0"
description = "数据查询与二维码生成工具"
authors = ["you"]
edition = "2021"

[lib]
name = "data_query_tool_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
calamine = "0.24"
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"
encoding_rs_io = "0.1"
dirs = "5.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

